name:                rascal

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.3
synopsis:            A command-line client for Reddit

-- A longer description of the package.
-- description:         

license:             MIT
license-file:        LICENSE
author:              Sylvain Soliman
maintainer:          Sylvain.Soliman@gmail.com
category:            Web
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable rascal
  main-is:           Main.hs
  other-modules:     Paths_rascal
  ghc-options:       -Wall
  build-depends:     base >=4.6 && <4.7, curl-aeson, curl, aeson,
                     process >= 1.2, ansi-terminal
  hs-source-dirs:    src
  default-language:  Haskell2010
